--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body{
     font-size: 15px;
+    color:white;
 }
 
 .block{
@@ -16,6 +17,24 @@ body{
     margin: 10% auto;
 }
 .card{
-    margin:15px;
+    margin:12px;
+    width:320px;
+    height:220px;
     padding: 15px;
+    background-color: hsl(300, 43%, 22%);
+}
+img{
+    border-radius: 100%;
+    float:left;
+    height:40px;
+    margin-right: 20px;
+}
+strong>p{
+    color:hsl(333, 80%, 67%);
+}
+#card2{
+    margin-top:25px;
+}
+#card3{
+    margin-top:38px;
 }
