--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,45 @@ strong>p{
 #card3{
     margin-top:38px;
 }
+
+@media only screen and (max-width:375px){
+    html{
+        overflow-y:visible;
+    }
+    .container{
+        width:85%;
+    }
+    .imgtop,.imgbot{
+        display:none;
+    }
+    .d-flex{
+        flex-direction: column;
+    }
+    .block,#block1,#block2{
+        width:100%;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    h1>strong{ 
+        width:200px;
+        text-align: center;
+        display:inline-block; 
+    }
+    #rect1,#rect2,#rect3{
+        margin-left:0;
+        width:100%;
+    }
+    .rect{
+        width:100%;
+        height:65px;
+    }
+    .star_container{
+        height:16px;
+        margin-left:calc((100% - 85px)/2);
+    }
+    #card1,#card2,#card3{
+        margin-left: 0;
+        width:100%;
+    }
+}
+
