--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     left:20%;
 }
 .container{
-    margin: 66px auto;
+    margin: 90px auto;
 }
 .block{
     width: 50%;
@@ -87,8 +87,10 @@ div>img{
     height:40px;
     margin-right: 20px;
 }
-strong>p{
+.auth{
     color:hsl(333, 80%, 67%);
+    position: relative;
+    top:-12px;
 }
 #card1{
     margin-left: 30px;
